k8s-config/services/config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: config-server
  name: config-server
spec:
  ports:
    - name: "8045"
      port: 8045
      targetPort: 8045
  selector:
    io.kompose.service: config-server
  type: NodePort
